Correct left margin of Title 01 to be aligned with the text.

--- a/osyl-configs/src/main/resources/osylcoconfigs/announcementsRegulationsHEC/skin/osyl.css
+++ b/osyl-configs/src/main/resources/osylcoconfigs/announcementsRegulationsHEC/skin/osyl.css
@@ -441,7 +441,7 @@
 	font:bold 25px Arial, Verdana, sans-serif;
 	margin-left:35px;
 }
-.Osyl-UnitView-ResPanel .Osyl-Title1, .Osyl-UnitView-TitlePanel .Osyl-Title1,
+
 .Osyl-UnitView-ResPanel .Osyl-Title2, .Osyl-UnitView-TitlePanel .Osyl-Title2,
 .Osyl-UnitView-ResPanel .Osyl-Title3, .Osyl-UnitView-TitlePanel .Osyl-Title3,
 .Osyl-UnitView-ResPanel .Osyl-Title4, .Osyl-UnitView-TitlePanel .Osyl-Title4,
@@ -452,6 +452,7 @@
 	font-size:25px;
 	margin-bottom:20px;
 	text-align:left;
+	margin-left:40px;
 }
 
 .Osyl-Title2 {
